--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,5 +1,4 @@
 <p>
-	<strong>Title</strong>
 	<h1><%= @recipe.title %></h1>
 </p>
 
@@ -17,6 +16,15 @@
 <p>
 	<strong>Description</strong>
 	<%= @recipe.description %>
+</p>
+
+<p>
+	<h3><%= @recipe.title %></h3>
+</p>
+
+<p>
+	<strong>Recipe Instructions</strong>
+	<%= @recipe.body %>
 </p>
 
 
