--- a/app/assets/stylesheets/recipes.css.scss
+++ b/app/assets/stylesheets/recipes.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+	
+}
+
+ul {
+	list-style-type: none;
+}
