--- a/app/views/recipes/_carousel.html.erb
+++ b/app/views/recipes/_carousel.html.erb
@@ -1,43 +1,65 @@
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <%= image_tag("strawberries_n_cream.jpg", :class => "img-thumbnail", :alt => "Strawberries 'n Cream") %>
-      <div class="carousel-caption">
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <%= image_tag("strawberries_n_cream.jpg", :class => "img-thumbnail", :alt => "Strawberries 'n Cream") %>
+        <div class="carousel-caption">
+        </div>
+      </div>
+
+      <div class="item">
+        <%= image_tag("mexican_hot_chocolate.jpg", :class => "img-thumbnail", :alt => "Mexican Hot Chocolate") %>
+        <div class="carousel-caption">
+        </div>
+      </div>
+
+      <div class="item">
+        <%= image_tag("whipped_cream.jpg", :class => "img-thumbnail", :alt =>"Whipped Cream, Ready to Serve" )%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+
+      <div class="item">
+        <%= image_tag("salted_caramel_brownies.jpg", :class => "img-thumbnail", :alt => "Salted Caramel Brownies")%>
+        <div class="carousel-caption">
+        </div>
       </div>
     </div>
 
-    <div class="item">
-      <%= image_tag("mexican_hot_chocolate.jpg", :class => "img-thumbnail", :alt => "Mexican Hot Chocolate") %>
-      <div class="carousel-caption">
-      </div>
-    </div>
-
-    <div class="item">
-      <%= image_tag("whipped_cream.jpg", :class => "img-thumbnail", :alt =>"Whipped Cream, Ready to Serve" )%>
-      <div class="carousel-caption">
-      </div>
-    </div>
-
-    <div class="item">
-      <%= image_tag("salted_caramel_brownies.jpg", :class => "img-thumbnail", :alt => "Salted Caramel Brownies" )%>
-      <div class="carousel-caption">
-      </div>
-    </div>
+    <!-- Controls -->
+    <a class="left carousel-control" id="carousel" href="#carousel-example-generic" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" id="carousel" href="#carousel-example-generic" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
   </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
+
+
+
+<form class="form-inline" role="form">
+  <div class="form-group">
+    <label class="sr-only" for="exampleInputEmail2">Email Address</label>
+    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email Address">
+  </div>
+  <div class="form-group">
+    <label class="sr-only" for="exampleInputPassword2">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+  </div>
+ 
+  <button type="submit" class="btn btn-default">
+    Log in
+  </button>" 
+
+
+</form>
