--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,3 @@
-$navbar-default-bg: #312312;
-$light-orange: #ff8c00;
-$navbar-default-color: $light-orange;
-
 @import "bootstrap";
 @import url(http://fonts.googleapis.com/css?family=Fascinate|Poller+One|Abril+Fatface);
 
@@ -22,5 +18,10 @@ body {
 
 .btn { 
 	background-color: #009900;
+	color: white;
+}
+
+.btn:hover { 
+	background-color: #33FF33;
 	color: white;
 }
