--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <h1>Your Profile</h1>
 
-<h1><%= current_user ? current_user.username : "(logged in)" %> </h1>
+<h3>
+	<%= current_user ? current_user.username : "(logged in)" %> 
+</h3>
 
-    <%= button_to "Log out", auths_path, method: :delete %>
-    
+<p>
+	<%= button_to "Log out", auths_path, method: :delete %>
+</p> 
