added new user path from homepage

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,11 +2,11 @@
 	<h1>Post Your Recipe</h1>
 	<%= form_for @recipe do |f| %>
 		<div class="field">
-			<%= f.text_field :title, :placeholder => "Enter Your Recipe Name" %>
+			<%= f.text_field :title, :placeholder => "Recipe Name" %>
 		</div>
 
 		<div class="field">
-			<%= f.text_field :author, :placeholder => "The Author" %>
+			<%= f.text_field :author, :placeholder => "Author" %>
 		</div>
 
 		<div class="field">
