--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,13 +1,17 @@
-<div class="login">
-	<h1>Log In</h1>
 
-	<%= form_for @recipe, {url:"/recipes", method:"get"} do |u|%>
+<form class="form-inline" role="form">
+	  <div class="form-group">
+	    <label class="sr-only" for="exampleInputEmail2">Email Address</label>
+	    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email Address">
+	  </div>
+	  <div class="form-group">
+	    <label class="sr-only" for="exampleInputPassword2">Password</label>
+	    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+	  </div>
 
-		<%= u.text_field :username, :placeholder => "Email Address" %>
-		<br />
-		<%= u.password_field :password, :placeholder => "Password" %>
-		<br />
-		<%= u.submit "Log In" %>
+	<div class="container">
+	  <%= button_to 'Log in', recipes_path, method: :get, class: 'btn btn-default', id: 'logIn' %>
 
-	<%end%>
-</div>
+	  <%= button_to 'New User', new_user_path, method: :get, class: 'btn btn-default', id: 'newUser' %>
+	</div>
+</form>
