--- a/app/views/recipes/home.html.erb
+++ b/app/views/recipes/home.html.erb
@@ -3,21 +3,4 @@
 <br />
 
 <%= render partial: 'carousel' %>
-<%#= render partial: 'form' %>
-
-<form class="form-inline" role="form">
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputEmail2">Email Address</label>
-    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email Address">
-  </div>
-  <div class="form-group">
-    <label class="sr-only" for="exampleInputPassword2">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
-  </div>
-
-  <%#= button_to "Log in", recipes_path, method: :get %>
-  <button type="submit" class="btn btn-default">
-    Log in
-  </button> 
-
-</form>
+<%= render partial: 'form' %>
