--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,9 @@
-<div class="createuser" id="newUser">
+<div class="createUser" id="newUser">
     <h1>Create your User Profile</h1>
     <%=form_for @user do |f|%>
-        <%=f.text_field :username, :placeholder => "Enter your username"%><br>
-        <%=f.password_field :password, :placeholder => "Enter password" %><br>
-
-        <%= f.submit "Create A New User" %>
+        	<%=f.text_field :username, :placeholder => "Enter your username"%>
+        	<%=f.password_field :password, :placeholder => "Enter password, 6+" %>
+        	<%= f.submit "Create A New User" %>
     <% end %>
     <%= link_to 'Home', root_path %>
 </div>
