--- a/app/views/recipes/home.html.erb
+++ b/app/views/recipes/home.html.erb
@@ -2,5 +2,5 @@
 <h3>Come spoon with me!</h3>
 <br />
 
-<%= render partial: 'carousel' %>
-<%= render partial: 'form' %>
+<%= render :partial => 'layouts/carousel' %>
+<%= render :partial => 'layouts/form' %>
