--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -22,8 +22,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Filter By <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Recipes", recipes_path %></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Ingredient</a></li>
+            <li><%#= link_to "Category", recipes_path %><a href="#">Category</a></li>
+            <li><%#= link_to "Ingredient", recipes_path %><a href="#">Ingredient</a></li>
             <li class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li class="divider"></li>
@@ -43,13 +43,13 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'My List', users_path %></li>
-            <li><a href="#">Email</a></li>
+            <li><%= link_to 'Edit', edit_user_path(:user_id) %></li>
             <li><%= link_to 'Log out', new_auth_path, method: 'delete' %></li>
             <li class="divider"></li>
             <li><a href="#">Delete Your Account?</a></li>
           </ul>
         </li>
-        <li><a href="#"> Welcome back, <%= current_user.username %></a></li>
+        <li><a href="#"> Welcome back, <%= current_user.username %><a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
