added ingredient section to Recipes.

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -15,7 +15,7 @@
 <!-- </p> -->
 
 <p>
-	<strong><u>Description</u></strong>
+	<strong><h4>Description: </h4></strong>
 	<br />
 	<%= @recipe.description %>
 </p>
@@ -25,7 +25,12 @@
 </p>
 
 <p>
-	<strong><u>Recipe Instructions</u></strong>
+	<strong><h4>Recipe Instructions</h4></strong>
+	<br />
+	<%= @recipe.ingredient %>
+</p>
+
+<p>
 	<br />
 	<%= @recipe.body %>
 </p>
