--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -40,10 +40,10 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a href="#">My List</a></li> -->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Profile options <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'My List', users_path %></li>
-            <li><%= link_to 'Edit', edit_user_path(:user_id) %></li>
+            <li><%= link_to 'Edit', edit_user_path(:@user) %></li>
             <li><%= link_to 'Log out', new_auth_path, method: 'delete' %></li>
             <li class="divider"></li>
             <li><a href="#">Delete Your Account?</a></li>
