--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -19,6 +19,10 @@
 		</div>
 
 		<div class="field">
+			<%= f.text_area :ingredient, :size => "60x12", :placeholder => "Ingredients" %>
+		</div>
+
+		<div class="field">
 			<%= f.text_area :body, :size => "60x12", :placeholder => "Recipe Instructions" %>
 		</div>
 
