--- a/app/views/auths/new.html.erb
+++ b/app/views/auths/new.html.erb
@@ -1,10 +1,13 @@
 <div class="login">
 	<h1>Log In</h1>
-
+	<br />
+	<br />
 	<%= form_for @user, {url:"/auths", method:"post"} do |u|%>
 
 		<%= u.text_field :username, :placeholder => "Enter your username" %>
 		<br />
+		<%= u.text_field :email, :placeholder =>"Email address" %>
+        <br />
 		<%= u.password_field :password, :placeholder => "Enter your password" %>
 		<br />
 		<%= u.submit "Log In" %>
