--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,13 +19,16 @@
         <li class="active"><%= link_to "Recipes", recipes_path %></li>
         <li><%= link_to "New", new_recipe_path %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Filter By <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Filter By Category<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Recipes", recipes_path %></li>
-            <li><%#= link_to "Category", recipes_path %><a href="#">Category</a></li>
-            <li><%#= link_to "Ingredient", recipes_path %><a href="#">Ingredient</a></li>
+            <!-- <li><%#= link_to "Recipes", recipes_path %></li> -->
+            <!-- <li><%#= link_to "Category", recipes_path %><a href="#">Category</a></li> -->
+            <!-- <li><%#= link_to "Ingredient", recipes_path ( %><a href="#">Ingredient</a></li> -->
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to "All", recipes_path %></li>
+            <li><%= link_to "Comfort Food", recipes_path(cook: "comfortFood") %></li>
+            <li><%= link_to "Grazing", recipes_path(cook: "grazing") %></li>
+            <li><%= link_to "Desserts", recipes_path(cook: "desserts") %></li>
             <li class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
@@ -46,7 +49,7 @@
             <li><%= link_to 'Edit', edit_user_path(:@user) %></li>
             <li><%= link_to 'Log out', new_auth_path, method: 'delete' %></li>
             <li class="divider"></li>
-            <li><a href="#">Delete Your Account?</a></li>
+            <li><%= link_to 'Delete your account?', new_user_path, method: 'delete', data: {confirm: 'Are you sure?'} %></li>
           </ul>
         </li>
         <li><a href="#"> Welcome back, <%= current_user.username %><a></li>
