--- a/app/views/layouts/_form1.html.erb
+++ b/app/views/layouts/_form1.html.erb
@@ -8,25 +8,13 @@
 			<%= f.text_field :author, :placeholder => "Recipe By" %>
 		</div>
 
-		<!-- <div class="field">
-			<%#= f.text_field :category, :placeholder => "Category" %>
-		</div>  -->
 		<div class="categoryDropdown">
-			<%#= f.select("Recipe", "category", Recipe::CATEGORIES, {:include_blank => true}) %>
-			<%#= f.collection_select :category_id, Category.order(:name), :id, :name, include_blank: true) %>
-			<%= f.select :category, options_for_select(['Category', 'Comfort Food', 'Grazing', 'Desserts']) %>
+			<%= f.select :category, options_for_select(['Category', 'Comfort Food', 'Grazing', 'Vegetarian', 'Desserts']) %>
 		</div>
-
-
-
-		 <%#= f.select, options_for_select [["Comfort Food", "comfortFood"], ["Grazing", "grazing"], ["Desserts", "desserts"]]) %>
-		
 
 		<div class="field">
 			<%= f.text_area :description, :size => "60x12", :placeholder => "Description" %>
 		</div>
-
-
 
 		<div class="field">
 			<%= f.text_area :ingredient, :size => "60x12", :placeholder => "Ingredients" %>
