--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,7 +28,7 @@
             <li><%= link_to "Salads", recipes_path(cook: "salads") %></li>
             <li><%= link_to "Desserts", recipes_path(cook: "desserts") %></li>
             <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <!-- <li><a href="#">One more separated link</a></li> -->
           </ul>
         </li>
       </ul>
@@ -43,11 +43,12 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Profile options <b class="caret"></b></a>
           <ul class="dropdown-menu">
+            <li class="divider"></li>
             <li><%= link_to 'My List', users_path %></li>
-            <li><%= link_to 'Edit', edit_user_path(:@user) %></li>
+            <li><%= link_to 'Edit', edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', new_auth_path, method: 'delete' %></li>
             <li class="divider"></li>
-            <li><%= link_to 'Delete your account?', new_user_path, method: 'delete', data: {confirm: 'Are you sure?'} %></li>
+            <!-- <li><%#= link_to 'Delete your account?', new_user_path, method: 'delete', data: {confirm: 'Are you sure?'} %></li> -->
           </ul>
         </li>
         <li><a href="#"> Welcome back, <%= current_user.username %><a></li>
