--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,20 +1,41 @@
+<div class="form-inline" role="form">
+	<%=form_for :user, { url: auths_path } do |u|%>
 
-<form class="form-inline" role="form">
+        	<%=u.text_field :username, :class => "form-control", :placeholder => "Enter username"%>
+
+        	<%= u.text_field :email, :class => "form-control", :placeholder =>"Email address" %>
+
+        	<%=u.password_field :password, :class => "form-control", :placeholder => "Enter password, 6+" %>
+
+        	<br />
+        	<div>
+	  			<%= u.submit 'Log in', class: 'btn btn-primary'%>
+	  			
+	  			<%= link_to 'Create a new User', new_user_path(@recipe) %>
+	 		 </div>
+    <% end %>
+</div>
+
+<!-- <form class="form-inline" role="form">
+	  <div class="form-group"> 
+    	<label class="sr-only" for="username">Enter Username</label>
+	    <input type="string" class="form-control" placeholder="Enter Username">
+	  </div>
 	  <div class="form-group"> 
     	<label class="sr-only" for="exampleInputEmail2">Enter Email</label>
-	    <input type="string" class="form-control" id="exampleInputEmail2" placeholder="Enter Email">
+	    <input type="string" class="form-control" placeholder="Enter Email">
 	  </div>
 	  <div class="form-group">
 	    <label class="sr-only" for="exampleInputPassword2">Password</label>
-	    <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+	    <input type="password" class="form-control" placeholder="Password">
 	  </div>
 	  <div>
-	  	<%= button_to 'Log in', recipes_path, method: :get, class: 'btn btn-primary', id: 'logIn' %>
+	  	<%#= button_to 'Log in', users_path, method: :get, class: 'btn btn-primary', id: 'logIn' %>
 
-	  	<%= button_to 'New User', new_user_path, method: :get, class: 'btn btn-default', id: 'makeUser' %>
+	  	<%#= button_to 'New User', new_user_path, method: :get, class: 'btn btn-default', id: 'makeUser' %>
 	  </div>
 	
-</form>
+</form> -->
 
 
 
