added width to recipe show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,7 +16,9 @@ a:hover {
 	max-width: 550px;
 	max-height: 480px;
 	margin: 0 auto;
+	
 }
+
 #carousel {
 	background-color: white;
 }
@@ -50,12 +52,13 @@ a:hover {
 
 /* show recipe */
 
-.ingredients {
-	position: absolute;
+#ingredients {
+	width: 200px;
 	margin: 0 auto;
 }
 
-.instructions {
-	position: absolute;
+#instructions {
+	width: 450px;
+	margin: 0 auto;
 }
 
