--- a/app/views/auths/new.html.erb
+++ b/app/views/auths/new.html.erb
@@ -10,7 +10,8 @@
         <br />
 		<%= u.password_field :password, :placeholder => "Enter your password" %>
 		<br />
-		<%= u.submit "Log In" %>
-
+		<%= u.submit "Log In" %> 
+		<br />
+		<%= link_to 'Home', root_path %>
 	<%end%>
 </div>
