--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -24,7 +24,7 @@
 		<h3><%= @recipe.title %></h3>
 	</p>
 
-	<div class="col-xs-12  col-sm-6 col-md-4" id="ingedients">
+	<div id="ingredients">
 		<strong><h4>Recipe Ingredients: </h4></strong>
 		<br />
 		<%= @recipe.ingredient %>
@@ -33,7 +33,7 @@
 
 		<br />
 		<br />
-	<div class="col-md-8" id="instructions">
+	<div id="instructions">
 		<p>
 			<strong><h4>Recipe Instructions: </h4></strong>
 			<%= @recipe.body %>
