--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -16,6 +16,12 @@
         </div>
       </div>
 
+      <div class="item ">
+        <%= image_tag("mozarella_and_tomato_salad.jpg", :class => "img-thumbnail", :alt => "Buffalo Mozarella and Tomato Salad")%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+
       <div class="item">
         <%= image_tag("mexican_hot_chocolate.jpg", :class => "img-thumbnail", :alt => "Mexican Hot Chocolate") %>
         <div class="carousel-caption">
@@ -23,7 +29,19 @@
       </div>
 
       <div class="item">
-        <%= image_tag("whipped_cream.jpg", :class => "img-thumbnail", :alt =>"Whipped Cream, Ready to Serve" )%>
+        <%= image_tag("fig_basil_goat_cheese_salad.jpg", :class => "img-thumbnail", :alt => "Fig Basil and Goat Cheese Salad")%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+
+      <div class="item">
+        <%= image_tag("whipped_cream_and_strawberries.jpg", :class => "img-thumbnail", :alt =>"Holding a Strawberry with Homemade Whipped Cream" )%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+
+      <div class="item">
+        <%= image_tag("salmon2.jpg", :class => "img-thumbnail", :alt =>"Salmon with Basil" )%>
         <div class="carousel-caption">
         </div>
       </div>
@@ -33,8 +51,13 @@
         <div class="carousel-caption">
         </div>
       </div>
-    </div>
 
+    <div class="item">
+        <%= image_tag("thousand_layer_lasagna.jpg", :class => "img-thumbnail", :alt => "Thousand Layer Lasagna")%>
+        <div class="carousel-caption">
+        </div>
+      </div>
+    </div>
     <!-- Controls -->
     <a class="left carousel-control" id="carousel" href="#carousel-example-generic" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
