--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,5 +12,9 @@
         	<br />
         	<%= f.submit "Edit your Account" %>
     <% end %>
+    <br />
+    <%= link_to 'Back', users_path %> 
+    <br />
     <%= link_to 'Home', root_path %>
+
 </div>
