--- a/app/views/layouts/_form1.html.erb
+++ b/app/views/layouts/_form1.html.erb
@@ -13,7 +13,9 @@
 		</div>
 
 		<div class="field">
+			<p class="text-center">
 			<%= f.file_field :image %>
+			</p>
 		</div>
 
 		<div class="field">
