--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -34,8 +34,7 @@
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <%= search_field(:title, :author) %>
-          <!-- <input type="text" class="form-control" placeholder="Search"> -->
+          <%= render :partial => 'layouts/search' %>
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
