--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -41,7 +41,7 @@
 <body>
  
 <div class="ui-widget">
-  <label for="tags">Tags: </label>
+  <label for="tags"> </label>
   <input id="tags">
 </div>
  
