db:seeded mexican hot chocolate

--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -41,7 +41,7 @@
       </div>
 
       <div class="item">
-        <%= image_tag("salmon2.jpg", :class => "img-thumbnail", :alt =>"Salmon with Basil" )%>
+        <%= image_tag("salmon.jpg", :class => "img-thumbnail", :alt =>"Salmon with Basil" )%>
         <div class="carousel-caption">
         </div>
       </div>
