re-edited production.rb

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -42,6 +42,12 @@ a:hover {
 	text-align: center;
 	left: 400px;
 }
+/* edit/new recipe*/
+
+.text-center {
+	left: 400px;
+}
+
 
 /* show recipe */
 
