--- a/app/views/layouts/_form1.html.erb
+++ b/app/views/layouts/_form1.html.erb
@@ -9,7 +9,7 @@
 		</div>
 
 		<div class="categoryDropdown">
-			<%= f.select :category, options_for_select(['Category', 'Comfort Food', 'Grazing', 'Salads', 'Desserts']) %>
+			<%= f.select :category, options_for_select(['Category', 'Comfort Food', 'Grazing', 'Salads', 'On The Side', 'Desserts']) %>
 		</div>
 
 		<div class="field">
