--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -47,7 +47,7 @@
             <li><%= link_to 'Edit', edit_user_path(current_user) %></li>
             <li><%= link_to 'Log out', new_auth_path, method: 'delete' %></li>
             <li class="divider"></li>
-            <!-- <li><%#= link_to 'Delete your account?', new_user_path, method: 'delete', data: {confirm: 'Are you sure?'} %></li> -->
+           <li><%= link_to 'Delete your account?', user_path(current_user), method: 'delete', data: {confirm: 'Are you sure?'} %></li> 
           </ul>
         </li>
         <li><a href="#"> Welcome back, <%= current_user.username %><a></li>
