--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,3 +1,4 @@
+<body class="editPage">
 <%= render partial: '/layouts/navbar' %>
 	<h1>Edit Your Recipe</h1>
 	<%= render partial: 'layouts/form1' %>
