testing environment variables

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,14 +14,14 @@ body.userEdit {
 	background-repeat: no-repeat;
 }
 
-/*body.editPage {
-	background-image: url(love_spoon.jpg);
+body.editPage {
+	background-image: url(spice_spoons.jpg);
 	position: center;
-	/*background-repeat: no-repeat;
-}*/
+	background-repeat: no-repeat;
+}
 
 body.homePage {
-	background-image: url(silver_sensations.jpg);
+	background-image: url(silver_sensations_1.jpg);
 	position: center;
 	background-repeat: no-repeat;
 }
@@ -70,7 +70,7 @@ a:hover {
 	width: 180px;
 }
 
-/* edit/new recipe*/
+/* edit/new recipe
 
 .text-center {
 	left: 400px;
