added all photos

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,18 @@ body.homePage {
 	background-repeat: no-repeat;
 }
 
+body.profilePage {
+	background-image: url(multicolored_painted_spoons.jpg);
+	position: center;
+	background-repeat: no-repeat;
+}
+
+body.authPage {
+	background-image: url(spoon_rack_bike.jpg);
+	position: center;
+	background-repeat: no-repeat;
+}
+
 a {
 	color: #004C66;
 }
