--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,7 +36,7 @@
         <div class="form-group">
           <%= render :partial => 'layouts/search' %>
         </div>
-          <%= link_to 'Submit', recipes_path, method: 'get', :class =>"btn btn-default" %>
+          <%= link_to 'Submit', @recipe_id, method: 'get', :class =>"btn btn-default" %>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
