--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <body class="userEdit">
+<%= render partial: '/layouts/navbar' %>
 <div class="editUser" id="editUser">
     <h1>Edit your Profile</h1>
     <br />
